TERMINADO CONSOLA DE ADMIN Y FORMULARIO DE CONTACTO